# bug_pixi

./: .gitignore  README.md
package_1/: pixi.toml
package_1/package_1/: pyproject.toml
package_1/package_1/src/package_1/: __init__.py
package_2/: pixi.toml
package_2/package_2/: pyproject.toml
package_2/package_2/src/package_2/: __init__.py
