[project]
authors = [{name = "Guillaume Lemaitre", email = "guillaume@probabl.ai"}]
dependencies = []
name = "package_2"
requires-python = ">= 3.11"
version = "0.1.0"
license = "BSD-3-Clause"
license-files = ["LICENSE.txt"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
package_2 = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = ">=3.14.2,<3.15"
numpy = ">=2.3.5,<3"
